syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.azure.csu.tiger.grpc.lib";
option java_outer_classname = "ProductProto";
import "base.proto";

// The Product service definition.
service Product {
  // list Category
  rpc listCategory (FindCategoryRequest) returns (CategoryListResponse) {
  }
  // list sku info
  rpc listSkuInfo (ListSkuRequest) returns (ListSkuInfoResponse) {
  }
  // list sku info
  rpc searchSku (ListSkuRequest2) returns (ListSkuInfoResponse) {
  }
}

message FindCategoryRequest {
  string name = 1;
  int64 parentId = 2;
}

message Category {
  int64 id = 1;
  string name = 2;
  int64 parentId = 3;
  bool isLeaf = 4;
  int32 sort = 5;
}

message CategoryListResponse {
  repeated Category datas = 1;
}

message ListSkuRequest {
  repeated int64 skuId = 1;
}
message ListSkuRequest2 {
  string name = 2;
  int64 categoryId = 3;
  int32 offset = 4;
  int32 limit = 5;
}
message ListSkuInfoResponse {
  int32 code = 1;
  bool success = 2;
  repeated SkuInfo datas = 3;
}